--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "^19.0.3",
     "@angular/platform-browser-dynamic": "^19.0.3",
     "@angular/router": "^19.0.3",
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "rxjs": "^7.8.1",
+    "swiper": "^11.1.15",
     "tslib": "^2.8.1",
     "zone.js": "^0.15.0"
   },
